@@ -1,4 +1,12 @@
 ____________________________________________________________________________
+[  2404] By: autrijus                              on 2001/11/23  12:09:44
+        Log: * 0.03, the CPAN version. 0.02 doesn't even compile.
+	   ! ComeFrom.pm
+____________________________________________________________________________
+[  2403] By: autrijus                              on 2001/11/23  12:02:45
+        Log: * changes.
+	   ! Changes
+____________________________________________________________________________
 [  2402] By: autrijus                              on 2001/11/23  12:01:54
         Log: * 0.02: fix prerequisites.
 	   ! ComeFrom.pm Makefile.PL
